--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial scale=1"/>
+        <link rel="stylesheet" href="style.css"/>
     <div class="box "></div>
     <title> My Story.com</title>
       
